moar fixes